--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,7 @@ body{
 }
 .listing .box-img{
     width: 25%;
+    height: 100%;
     margin-right: 20px;
 }
 .listing .meta-box{
@@ -30,9 +31,23 @@ body{
 .listing a {
         text-decoration: none;
 }
-
-
-
+.listing h3{
+    padding: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.listing p{
+    padding: 0;
+    margin: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.heade-share-link p{
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 h1{
     color: white;
